--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,79 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
-  h1 {
+  h2 {
     font-family: "Roboto", sans-serif;
+  }
+}
+
+footer {
+  background-color: #cfd8c9;
+}
+
+button {
+  background-color: #cfd8c9;
+}
+
+.section_2 {
+  background-color: #cfd8c9;
+}
+
+@layer base {
+  h1 {
+    font-family: "salsa", cursive;
+  }
+}
+
+@layer base {
+  .wrapper {
+    justify-content: space-around;
+    padding-left: 5%;
+    padding-right: 5%;
+    align-items: center;
+    justify-content: center;
+    margin: 1.5% 5% 5% 5%;
+    min-width: 20rem;
+    gap: 3rem;
+    overflow-wrap: break-word;
+  }
+
+  .wrapper div {
+    transition: 0.5s ease;
+    opacity: 1;
+  }
+  .wrapper img {
+    transition: 0.5s ease;
+    opacity: 1;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+
+  .wrapper img:hover {
+    opacity: 1;
+  }
+
+  .wrapper article {
+    position: relative;
+  }
+
+  .wrapper article:hover img {
+    opacity: 0.3;
+  }
+
+  .wrapper article:hover .hm {
+    opacity: 1;
+  }
+
+  .hm {
+    transition: 0.5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .hm:hover {
+    opacity: 1;
   }
 }
