--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
 
 footer {
   background-color: #cfd8c9;
+  min-width: 100%;
 }
 
 button {
@@ -131,4 +132,43 @@ button:hover {
   padding: 3.5%;
   min-height: 4rem;
   min-width: 5.5rem;
+}
+
+@media (max-width: 1080px) {
+  .wrapper div {
+    transition: 0.5s ease;
+    opacity: 1;
+  }
+  .wrapper img {
+    transition: 0.5s ease;
+    opacity: 1;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  .wrapper img:hover {
+    opacity: 1;
+  }
+  .wrapper article {
+    position: relative;
+  }
+  .wrapper article:hover img {
+    opacity: 1;
+  }
+  .wrapper article:hover .hm {
+    opacity: 1;
+  }
+  .hm {
+    transition: 0.5s ease;
+    opacity: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .hm:hover {
+    opacity: 1;
+  }
+  .profil {
+    width: 100%;
+  }
 }
